antlr-generated/CatalogParser.py
# Generated from Catalog.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class CatalogParser ( Parser ):

    grammarFileName = "Catalog.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "': '", "'Course'", "'Title'", "'Units'", 
                     "'Desc'", "'Prereq'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "COURSELITERAL", "TITLELITERAL", 
                      "UNITSLITERAL", "DESCLITERAL", "PREREQLITERAL", "NUMBER", 
                      "WORD", "WS", "WSPLUS", "PUNC", "UNITS", "COURSENAME", 
                      "TITLEDESC", "PREREQ" ]

    RULE_catalog = 0
    RULE_course = 1

    ruleNames =  [ "catalog", "course" ]

    EOF = Token.EOF
    T__0=1
    COURSELITERAL=2
    TITLELITERAL=3
    UNITSLITERAL=4
    DESCLITERAL=5
    PREREQLITERAL=6
    NUMBER=7
    WORD=8
    WS=9
    WSPLUS=10
    PUNC=11
    UNITS=12
    COURSENAME=13
    TITLEDESC=14
    PREREQ=15

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class CatalogContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(CatalogParser.EOF, 0)

        def course(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CatalogParser.CourseContext)
            else:
                return self.getTypedRuleContext(CatalogParser.CourseContext,i)


        def getRuleIndex(self):
            return CatalogParser.RULE_catalog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCatalog" ):
                listener.enterCatalog(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCatalog" ):
                listener.exitCatalog(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCatalog" ):
                return visitor.visitCatalog(self)
            else:
                return visitor.visitChildren(self)




    def catalog(self):

        localctx = CatalogParser.CatalogContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_catalog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 5 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 4
                self.course()
                self.state = 7 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==CatalogParser.COURSELITERAL):
                    break

            self.state = 9
            self.match(CatalogParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CourseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COURSELITERAL(self):
            return self.getToken(CatalogParser.COURSELITERAL, 0)

        def WORD(self):
            return self.getToken(CatalogParser.WORD, 0)

        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(CatalogParser.WS)
            else:
                return self.getToken(CatalogParser.WS, i)

        def TITLELITERAL(self):
            return self.getToken(CatalogParser.TITLELITERAL, 0)

        def TITLEDESC(self, i:int=None):
            if i is None:
                return self.getTokens(CatalogParser.TITLEDESC)
            else:
                return self.getToken(CatalogParser.TITLEDESC, i)

        def UNITSLITERAL(self):
            return self.getToken(CatalogParser.UNITSLITERAL, 0)

        def NUMBER(self):
            return self.getToken(CatalogParser.NUMBER, 0)

        def DESCLITERAL(self):
            return self.getToken(CatalogParser.DESCLITERAL, 0)

        def PREREQLITERAL(self):
            return self.getToken(CatalogParser.PREREQLITERAL, 0)

        def PREREQ(self):
            return self.getToken(CatalogParser.PREREQ, 0)

        def WSPLUS(self):
            return self.getToken(CatalogParser.WSPLUS, 0)

        def getRuleIndex(self):
            return CatalogParser.RULE_course

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCourse" ):
                listener.enterCourse(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCourse" ):
                listener.exitCourse(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCourse" ):
                return visitor.visitCourse(self)
            else:
                return visitor.visitChildren(self)




    def course(self):

        localctx = CatalogParser.CourseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_course)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 11
            self.match(CatalogParser.COURSELITERAL)
            self.state = 12
            self.match(CatalogParser.T__0)
            self.state = 13
            self.match(CatalogParser.WORD)
            self.state = 14
            self.match(CatalogParser.WS)
            self.state = 15
            self.match(CatalogParser.TITLELITERAL)
            self.state = 16
            self.match(CatalogParser.T__0)
            self.state = 17
            self.match(CatalogParser.TITLEDESC)
            self.state = 18
            self.match(CatalogParser.WS)
            self.state = 19
            self.match(CatalogParser.UNITSLITERAL)
            self.state = 20
            self.match(CatalogParser.T__0)
            self.state = 21
            self.match(CatalogParser.NUMBER)
            self.state = 22
            self.match(CatalogParser.WS)
            self.state = 23
            self.match(CatalogParser.DESCLITERAL)
            self.state = 24
            self.match(CatalogParser.T__0)
            self.state = 25
            self.match(CatalogParser.TITLEDESC)
            self.state = 26
            self.match(CatalogParser.WS)
            self.state = 27
            self.match(CatalogParser.PREREQLITERAL)
            self.state = 28
            self.match(CatalogParser.T__0)
            self.state = 29
            self.match(CatalogParser.PREREQ)
            self.state = 30
            self.match(CatalogParser.WSPLUS)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





